Fix the spacing of lists in dropdown headers

--- a/apps/site/assets/css/_header.scss
+++ b/apps/site/assets/css/_header.scss
@@ -122,6 +122,10 @@
   &:first-child {
     border-left-width: 0;
   }
+
+  ul {
+    margin-top: -$paragraph-spacing-adjustment;
+  }
 }
 
 .nav-title {
